Update 53. Maximum Subarray.md

--- a/53. Maximum Subarray.md
+++ b/53. Maximum Subarray.md
@@ -28,7 +28,7 @@ which is more subtle.
 
 具体思路如下:
 * 我们可以尝试从头到尾遍历数组
-* 首先假定连续和最大的子字符串的开始位置在0处,并定义一个变量temp存储此时的连续和,变量res存储结果.
+* 首先假定连续和最大的子字符串的开始位置在0处,并定义一个变量max_here存储此时的连续和,变量max_sofar存储整体的最大结果.
 * 向后遍历,比较当前值与相加和的大小:
 * 如果当前值大于相加和,则将连续字符串的开头移至当前值处,新的相加和也变为当前值.   
 * 如果当前值小于相加和,则将其加入相加和中
