--- a/118. Pascal's Triangle.md
+++ b/118. Pascal's Triangle.md
@@ -1,7 +1,7 @@
-# 118. Pascal's Triangle(easy)
+# 118/119. Pascal's Triangle I/II(easy)
 
 ## Description
-> 原题连接: https://leetcode.com/problems/pascals-triangle/
+> Link: https://leetcode.com/problems/pascals-triangle/                                                                                 https://leetcode.com/problems/pascals-triangle-ii/submissions/
 
 ```
 Given a non-negative integer numRows, generate the first numRows of Pascal's triangle.
@@ -11,7 +11,7 @@ In Pascal's triangle, each number is the sum of the two numbers directly above i
 
 Example:
 Input: 5
-Output:
+Output118:
 [
      [1],
     [1,1],
@@ -19,8 +19,10 @@ Output:
   [1,3,3,1],
  [1,4,6,4,1]
 ]
+Output119:
+[1,5,10,10,5,1]
 
-输出n层杨辉三角形
+输出杨辉三角形整体或第n+1行
 
 ```
 
@@ -31,7 +33,7 @@ Output:
 
 
 ## Code
-
+LC118
 ```java
 class Solution118 {
     public List<List<Integer>> generate(int numRows) {
@@ -49,7 +51,28 @@ class Solution118 {
     }
 }
 ```
+LC119
+```java
+class Solution119 {
+    public List<Integer> getRow(int rowIndex) {
+        List<Integer> res = new ArrayList<>();
+        
+        for (int i = 0; i <= rowIndex; i++){
+            res.add(0,1);
+            for (int j = 1; j < res.size()-1; j++){
+                res.set(j, res.get(j)+res.get(j+1));
+            }
+        }
+        return res;
+    }
+}
+```
 
 ## Submission details
+LC118                                                                                                        
 Runtime: 0 ms, faster than 100.00% of Java online submissions for Pascal's Triangle.                                   
-Memory Usage: 32.8 MB, less than 100.00% of Java online submissions for Pascal's Triangle.
+Memory Usage: 32.8 MB, less than 100.00% of Java online submissions for Pascal's Triangle.  
+
+LC119                                                                                                       
+Runtime: 1 ms, faster than 84.72% of Java online submissions for Pascal's Triangle II.                        
+Memory Usage: 32.6 MB, less than 100.00% of Java online submissions for Pascal's Triangle II.
