Update 118. Pascal's Triangle.md

--- a/118. Pascal's Triangle.md
+++ b/118. Pascal's Triangle.md
@@ -1,7 +1,7 @@
 # 118/119. Pascal's Triangle I/II(easy)
 
 ## Description
-> Link: https://leetcode.com/problems/pascals-triangle/                                                                                 https://leetcode.com/problems/pascals-triangle-ii/submissions/
+> Link: https://leetcode.com/problems/pascals-triangle/ (118)                                                                                https://leetcode.com/problems/pascals-triangle-ii/ (119)
 
 ```
 Given a non-negative integer numRows, generate the first numRows of Pascal's triangle.
