Breadth First Search

--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -1,7 +1,7 @@
-# 127
+# 127. Word Ladder
 
 ## Description
-> Link: 
+> Link: https://leetcode.com/problems/word-ladder/
 
 ```
 Given two words (beginWord and endWord), and a dictionary's word list, find the length of shortest 
@@ -45,6 +45,35 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 
 LC好像DFS比BFS多的多，我到现在也没做过几个BFS的题目，今天终于碰到一个了！
 早上看到这个题头疼的不行，看了半天没看出来啥，看答案都脑壳疼，现在再来看看~
+
+
+
+因为步骤有些复杂，所以用题目中给的例子来说明：输入[hit],输出[cog],字典[hot,dot,dog,lot,log,cog].<br>
+
+一般情况下，我们希望每次改变一个字母，使得输入与输出相匹配。例如[hit]->[cit]->[cot]->[cog]，但是很明显这道题肯定是不会这么简单的！因为题目给出了我们一个字典，途径的单词必须在字典中存在，所以我们只能依次寻找字典中存在的字符串进行变换。<br><br>
+
+我们来想想如果是自己做这道题会如何去做：首先对输入字符串[hit]进行修改，使其变化后的字符串在字典中存在，那么我们就需要对[hit]单词进行依次检查了。<br>
+
+尝试将[hit]转变为[ait].[bit]...[zit]查看字典中是否存在这样的数。不存在，emmm，那么我们继续检查字符串的下一个字符。<br>
+
+尝试将[hit]转变为[hat].[hbt]...[hzt]查看字典中是否存在这一的数，存在，就是[hot]。<br>
+当我们找到[hot]的时候，下一步应当如何去做呢？DFS算法需要我们将一个方案继续进行下去，直到找出一个正确答案为止；BFS算法则让我们暂且放下该方案，尝试用不同的路径去解决，直到看哪一个先到达终点。<br>
+
+了解到这一点，我们发现，DFS方法更适合去获得所有的方案，因为DFS最先得到的方案可能并不是最短的，但如果采用DFS方法，则必须要将这条路全部走完，再进入下一条路，最后进行对比得到最短；而BFS则是广撒网的思路，看谁先被网捉住，若有被捉住的，则可以停止搜寻，不必再将稍远的道路走完。DFS相比BFS的优势则在于，每一条走的路都是通的，不会多次走向不通的道路。<br>
+
+而落实到这一题上，则可以用如下的图示去表达BFS与DFS的路径：<br>
+ 
+BFS: <br>
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;┍->[cog] ☆          
+
+[hit]->[hot]->[dot]->[dog]->[log]     <br>
+
+&emsp;&emsp;&emsp;&emsp;&ensp;┕->[lot] <br>
+ 
+DFS: <br>
+[hit]->[hot]->[dot]->[lot]->[log]->[cog] ☆ <br>
+
+按照这样的思路去设计算法即可。
 
 
 
