Update 127. Word Ladder.md

--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -64,12 +64,13 @@ LC好像DFS比BFS多的多，我到现在也没做过几个BFS的题目，今天
 而落实到这一题上，则可以用如下的图示去表达BFS与DFS的路径：<br>
  
 BFS: <br>
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;┍->[cog] ☆          
+&emsp;&emsp;1&emsp;&emsp;2&emsp;&emsp;3&emsp;&emsp;4&emsp;&emsp;&emsp;┍->[cog] ☆          
 
-[hit]->[hot]->[dot]->[dog]->[log]     <br>
+[hit]->[hot]->[dot]->[dog]->[cog] ☆    <br>
 
 &emsp;&emsp;&emsp;&emsp;&ensp;┕->[lot] <br>
- 
+
+
 DFS: <br>
 [hit]->[hot]->[dot]->[lot]->[log]->[cog] ☆ <br>
 
