Update 127. Word Ladder.md

--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -64,10 +64,8 @@ LC好像DFS比BFS多的多，我到现在也没做过几个BFS的题目，今天
 而落实到这一题上，则可以用如下的图示去表达BFS与DFS的路径：<br>
  
 BFS: <br>
-&emsp;&emsp;1&emsp;&emsp;2&emsp;&emsp;3&emsp;&emsp;4&emsp;&emsp;&emsp;┍->[cog] ☆          
-
+&ensp;1&ensp;&emsp;&emsp;2&emsp;&emsp;&ensp;3&emsp;&emsp;&ensp;&ensp;4&emsp;&emsp;&ensp;&ensp;5       
 [hit]->[hot]->[dot]->[dog]->[cog] ☆    <br>
-
 &emsp;&emsp;&emsp;&emsp;&ensp;┕->[lot] <br>
 
 
@@ -75,8 +73,6 @@ DFS: <br>
 [hit]->[hot]->[dot]->[lot]->[log]->[cog] ☆ <br>
 
 按照这样的思路去设计算法即可。
-
-
 
 
 ## Code
