--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -76,9 +76,83 @@ DFS: <br>
 
 
 ## Code
-
+Solution1: 
 ```java
+class Solution127_1{
+   public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+        Set<String> wordSet = new HashSet<>(wordList);
+        if (!wordSet.contains(endWord)) return 0;
+        Map<String, Integer> pathCnt = new HashMap<>();
+        pathCnt.put(beginWord,1);
+        Queue<String> q = new LinkedList<String>();
+        q.offer(beginWord);
+        while (!q.isEmpty()) {
+            String word = q.poll();
+            for (int i = 0; i < word.length(); i++) {
+                String newWord = word;
+                char[] newWordChar = newWord.toCharArray();
+                for (char ch = 'a'; ch <= 'z'; ++ch) {
+                    newWordChar[i] = ch;
+                    newWord = String.valueOf(newWordChar);
 
+                    if (wordSet.contains(newWord) && newWord.equals(endWord)) {
+                        return pathCnt.get(word) + 1;
+                    }
+                    if (wordSet.contains(newWord) && !pathCnt.containsKey(newWord)) {
+                        q.offer(newWord);
+                        pathCnt.put(newWord, pathCnt.get(word) + 1);
+                    }
+                }
+            }
+        }
+        return 0;
+    }
+}
+```
+
+Solution2(神仙算法，看不懂T-T):
+```java
+class Solution127_2 {
+    public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+        Set<String> dict = new HashSet<>(wordList), start = new HashSet<>(), end = new HashSet<>();
+        start.add(beginWord);
+        // 检查目的地是否在字典中
+        if (dict.contains(endWord)) end.add(endWord); 
+        for (int len = 2; !start.isEmpty(); len++) {
+            Set<String> success = new HashSet<>();
+            for (String word : start) {
+                // 依次查询字符串的每个字符,是否有刚好一个不同的词语存在
+                for (int j = 0; j < word.length(); j++) {// 在检查第几个字母
+                    char[] wordChar = word.toCharArray();
+                    for (char test = 'a'; test <= 'z'; test++) {
+                        // 重复检查自身则跳过(如hit->hit)
+                        if (test == word.charAt(j)) continue; =
+                        wordChar[j] = test;
+                        String wordString = String.valueOf(wordChar);
+                        // 如果目前尝试的String与所需求的一致,返回len
+                        if (end.contains(wordString)) return len; // meet from two ends
+                        // 如果目前尝试的String在字典中存在,并且没被访问过,将其加入success中
+                        if (dict.contains(wordString)) { 
+                            success.add(wordString);
+                            dict.remove(wordString);
+                        } 
+                    }
+                }
+            }
+            // switch to small one to traverse from other end
+            start = (success.size() < end.size()) ? success : end;
+            end = (start == success) ? end : success;
+        }
+        return 0;
+    }
+}
 ```
 
 ## Submission details
+Solution1:
+Runtime: 80 ms, faster than 51.88% of Java online submissions for Word Ladder.<br>
+Memory Usage: 44.6 MB, less than 23.29% of Java online submissions for Word Ladder.
+
+Solution2:
+Runtime: 13 ms, faster than 98.97% of Java online submissions for Word Ladder.<br>
+Memory Usage: 39.2 MB, less than 85.93% of Java online submissions for Word Ladder.
