--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -1,7 +1,7 @@
 # 1. Two Sum (easy)
 
 ## Description
-> Link: 
+> Link: https://leetcode.com/problems/two-sum/
 
 ```
 Given an array of integers, return indices of the two numbers such that they add up to a specific target.
