--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -26,7 +26,7 @@ return [0, 1].
 
 太简单噜，直接把原来写的搬过来了…… 原来写的都是流程形式的，跟现在不太一样
 
-1)创造一个HashMap med，用于存储正整数组<br>
+1)创造一个HashMap，用于存储正整数组<br>
 2)创造一个数组res，存储最终满足条件的两数的下标<br>
 3)遍历nums(i=0 to nums.length)<br>
 3.1) 检查HashMap的key中是否存在与nums[i]相加为target的数，若有，则表明两数为最终所需的答案<br>
