--- a/53. Maximum Subarray.md
+++ b/53. Maximum Subarray.md
@@ -22,9 +22,9 @@ which is more subtle.
 
 
 ## Solution
-> 使用方法: Kadane's Algorithm
+> Related Topics: Dynamic Programming, Kadane's Algorithm
 
-与[LC121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)相似
+> Related Question: [LC121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)相似
 
 具体思路如下:
 * 我们可以尝试从头到尾遍历数组
@@ -37,7 +37,6 @@ which is more subtle.
 
 
 ## Code
-
 ```java
 class Solution53{
   public int maxSubArray(int[] nums) {
