--- a/118&119. Pascal's Triangle(I&II).md
+++ b/118&119. Pascal's Triangle(I&II).md
@@ -28,6 +28,7 @@ Output119:
 
 
 ## Solution
+> Related Topic: Array
 
 这个解答还是有点巧妙的，将空间复杂度降低了很多，由两层循环简化成了一层。这是由于每一层的结果都和上一层相关，因此可以将其继续使用，只是每层都需要增加一个数。
 
