--- a/120. Triangle.md
+++ b/120. Triangle.md
@@ -37,7 +37,6 @@ triangle.
 
 
 ## Code
-
 ```java
 class Solution {
     public int minimumTotal(List<List<Integer>> triangle) {
@@ -59,5 +58,5 @@ class Solution {
 ```
 
 ## Submission details
-Runtime: 4 ms, faster than 57.64% of Java online submissions for Triangle.                                     
+Runtime: 4 ms, faster than 57.64% of Java online submissions for Triangle.<br>
 Memory Usage: 38.5 MB, less than 30.07% of Java online submissions for Triangle.
