--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -28,7 +28,7 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 
 ## Solution
-> 使用方法: Kadane's Algorithm
+> 使用方法: Dynamic Programming, Kadane's Algorithm
 
 在[LC53. Maximum Subarray](https://leetcode.com/problems/maximum-subarray/)基础上延伸
 
