--- a/122. Best Time to Buy and Sell Stock II.md
+++ b/122. Best Time to Buy and Sell Stock II.md
@@ -35,6 +35,7 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 
 ## Solution
+> Related Topics: Array, Greedy
 
 相关题目: [LC121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)
 
