--- a/12&13. Integer Roman Transform.md
+++ b/12&13. Integer Roman Transform.md
@@ -1,7 +1,7 @@
-# 12. Integer to Roman
+# 12. Integer to Roman & 13. Roman to Integer
 
 ## Description
-> Link: https://leetcode.com/problems/integer-to-roman/
+> Link: https://leetcode.com/problems/integer-to-roman/ (12) https://leetcode.com/problems/roman-to-integer/ (13)
 
 ```
 Roman numerals are represented by seven different symbols: I, V, X, L, C, D and M.
@@ -56,13 +56,15 @@ Explanation: M = 1000, CM = 900, XC = 90 and IV = 4.
 
 > Related Topics: Math, String
 
-这道题最好的方法是将数字和罗马字母对应的内容直接以数组的形式保存，遇到相应的情况时保存~可以说是很巧了！
+LC12这道题最好的方法是将数字和罗马字母对应的内容直接以数组的形式保存，遇到相应的情况时保存~可以说是很巧了！
 
+LC13我采用的是HashMap匹配搜索的方法，当检查到当前位数代表的值比前一位大时，则表明前一位多加了，需要扣除2倍。<br>
+这题使用各情况依次讨论的方法会更快，但我觉得太麻烦了，你们懂就好了~
 
 ## Code
-
+LC12
 ```java
-class Solution {
+class Solution12 {
     public String intToRoman(int num) {
         int[] it = {1000,900,500,400,100,90,50,40,10,9,5,4,1};
 		String[] str = {"M","CM","D","CD","C","XC","L","XL","X","IX","V","IV","I"};
@@ -79,7 +81,34 @@ class Solution {
     }
 }
 ```
+LC13
+```java
+class Solution13 {
+    public int romanToInt(String s) {
+        Map<Character, Integer> dict = new HashMap<>();
+        dict.put('I',1);
+        dict.put('V',5);
+        dict.put('X',10);
+        dict.put('L',50);
+        dict.put('C',100);
+        dict.put('D',500);
+        dict.put('M',1000);
+
+        int sum = 0;
+        char[] c = s.toCharArray();
+        for (int i = 0; i < c.length; i++){
+            if (i > 0 && dict.get(c[i]) > dict.get(c[i-1])) sum -= 2 * dict.get(c[i-1]);
+            sum += dict.get(c[i]);
+        }
+        return sum;
+    }
+}
+```
 
 ## Submission details
+LC12:<br>
 Runtime: 3 ms, faster than 100.00% of Java online submissions for Integer to Roman.<br>
-Memory Usage: 37.5 MB, less than 100.00% of Java online submissions for Integer to Roman.
+Memory Usage: 37.5 MB, less than 100.00% of Java online submissions for Integer to Roman.<br>
+LC13:<br>
+Runtime: 7 ms, faster than 79.98% of Java online submissions for Roman to Integer.<br>
+Memory Usage: 37.3 MB, less than 34.80% of Java online submissions for Roman to Integer.
