--- a/53. Maximum Subarray.md
+++ b/53. Maximum Subarray.md
@@ -1,11 +1,11 @@
-# 53. Maximum Subarray(easy)
+# 53. Maximum Subarray (easy)
 
 ## Description
-> 原题连接: https://leetcode.com/problems/maximum-subarray/
+> Link: https://leetcode.com/problems/maximum-subarray/
 
 ```
-Given an integer array nums, find the contiguous subarray (containing at least one number) which has the largest 
-sum and return its sum.
+Given an integer array nums, find the contiguous subarray (containing at least one number) which has the 
+largest sum and return its sum.
 
 Example:
 Input: [-2,1,-3,4,-1,2,1,-5,4],
@@ -24,7 +24,7 @@ which is more subtle.
 ## Solution
 > Related Topics: Dynamic Programming, Kadane's Algorithm
 
-> Related Question: [LC121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)相似
+> Related Question: [LC121. Best Time to Buy and Sell Stock](https://github.com/Zingg7/LeetCode/blob/master/121.%20Best%20Time%20to%20Buy%20and%20Sell%20Stock.md)
 
 具体思路如下:
 * 我们可以尝试从头到尾遍历数组
@@ -38,7 +38,7 @@ which is more subtle.
 
 ## Code
 ```java
-class Solution53{
+class Solution53 {
   public int maxSubArray(int[] nums) {
     int max_here = Integer.MIN_VALUE, max_sofar = nums[0];
     for (int num : nums ) {
@@ -49,3 +49,7 @@ class Solution53{
   }	
 }
 ```
+
+## Submission details
+Runtime: 1 ms, faster than 96.86% of Java online submissions for Maximum Subarray.<br>
+Memory Usage: 38.7 MB, less than 89.13% of Java online submissions for Maximum Subarray.
