--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -1,7 +1,7 @@
 # 121. Best Time to Buy and Sell Stock(easy)
 
 ## Description
-> 原题连接: https://leetcode.com/problems/best-time-to-buy-and-sell-stock/
+> Link: https://leetcode.com/problems/best-time-to-buy-and-sell-stock/
 
 ```
 Say you have an array for which the ith element is the price of a given stock on day i.
@@ -28,9 +28,9 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 
 ## Solution
-> 使用方法: Dynamic Programming, Kadane's Algorithm
+> Related Topics: Dynamic Programming, Kadane's Algorithm
 
-在[LC53. Maximum Subarray](https://leetcode.com/problems/maximum-subarray/)基础上延伸
+> Related Questions: [LC53. Maximum Subarray](https://github.com/Zingg7/LeetCode/blob/master/53.%20Maximum%20Subarray.md)
 
 创造一个变量maxSofar,存储整个检验过程中最大的差; 创造一个变量maxNow,存储当前检验循环中的最大值                      
 遍历数组,检查下一个数是否比当前数大                                                                                
@@ -39,14 +39,13 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 每次检验时都比较maxSofar与maxNow的大小,将较大的值赋给maxSofar
 
 
-
 ## Code
 
 ```java
 class Solution121 {
     public int maxProfit(int[] prices) {
         int maxSofar = 0, maxNow = 0;
-        for(int i = 1; i < prices.length; i++){
+        for(int i = 1; i < prices.length; i++) {
             maxNow = Math.max(0, prices[i] - prices[i-1] + maxNow);
             maxSofar = Math.max(maxSofar, maxNow);
         }
@@ -56,5 +55,5 @@ class Solution121 {
 ```
 
 ## Submission details
-Runtime: 1 ms, faster than 80.74% of Java online submissions for Best Time to Buy and Sell Stock.                          
+Runtime: 1 ms, faster than 80.74% of Java online submissions for Best Time to Buy and Sell Stock.<br>
 Memory Usage: 38.6 MB, less than 57.32% of Java online submissions for Best Time to Buy and Sell Stock.
