--- a/15. 3Sum.md
+++ b/15. 3Sum.md
@@ -28,9 +28,9 @@ A solution set is:
 
 ## Solution
 
-> Related Topics: Two Pointers <br>
+> Related Topics: Two Pointers
 
-> Related Questions: [LC16. 3Sum Closest](), [LC18. 4Sum]()
+> Related Questions: [LC16. 3Sum Closest](https://github.com/Zingg7/LeetCode/blob/master/16.%203Sum%20Closest.md), [LC18. 4Sum](https://github.com/Zingg7/LeetCode/blob/master/18.%204Sum.md)
 
 这道题首先我们将输入的数组排序，再进行查找，可以节省搜寻的时间。<br>
 若达到不可能得到结果的数字时，可以尽早结束判断。
