--- a/16. 3Sum Closest.md
+++ b/16. 3Sum Closest.md
@@ -13,14 +13,17 @@ Given array nums = [-1, 2, 1, -4], and target = 1.
 
 The sum that is closest to the target is 2. (-1 + 2 + 1 = 2).
 
+寻找数组中所有三数相加和与目标最近的和
+
 ```
+
 
 
 ## Solution
 
 > Related Topics: Two Pointers
 
-> Related Questions: [LC15. 3Sum](https://github.com/Zingg7/LeetCode/blob/master/15.%203Sum.md), [LC18. 4Sum]()
+> Related Questions: [LC15. 3Sum](https://github.com/Zingg7/LeetCode/blob/master/15.%203Sum.md), [LC18. 4Sum](https://github.com/Zingg7/LeetCode/blob/master/18.%204Sum.md)
 
 这题和LC15有些类似，原理相同但是仍有少许不同之处。
 还是一样固定一个数，在其后的序列使用两个指针检查。每次计算三数之和，是否最接近目标。
