Hash Table, Two Points

--- a/18. 4Sum.md
+++ b/18. 4Sum.md
@@ -58,13 +58,15 @@ class Solution18 {
             if (nums[i] + nums[nums.length-1] + nums[nums.length-2] + nums[nums.length-3] < target) continue;
             // repeat
             if (i>0 && nums[i] == nums[i-1]) continue;
+            
             // fixed the second number
             for (int j = i+1; j < nums.length - 2; j++) {
                 // same as above
                 if (nums[i] + nums[j] + nums[j+1] + nums[j+2] > target) break;
                 if (nums[i] + nums[j] + nums[nums.length-1] + nums[nums.length-2] < target) continue;
                 if (j > i+1 && nums[j] == nums[j-1]) continue;
-                // same as 3Sum
+                
+                // find the third and fourth: same as 3Sum
                 int left = j + 1, right = nums.length - 1;
                 while (left < right){
                     if (nums[i] + nums[j] + nums[left] + nums[right] == target) {
@@ -75,10 +77,8 @@ class Solution18 {
                         while (left < right && nums[right] == nums[right+1]) right --;
                     } else if (nums[i] + nums[j] + nums[left] + nums[right] < target){
                         left ++;
-                    } else { right -- ;}
-                    
-                }
-                                   
+                    } else { right -- ;}                   
+                }               
             }
         }
         return res;
