--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -25,6 +25,8 @@ Explanation: 342 + 465 = 807.
 
 > Related Topics: Linked List
 
+> Related Questions: [LC2. Remove Nth Node From End of List](https://github.com/Zingg7/LeetCode/blob/master/19.%20Remove%20Nth%20Node%20From%20End%20of%20List.md)
+
 诶第一次做链表...以前看到链表就跑了，我就是不想自学新知识啊>.< <br>
 没办法了，本来说做132题结果到100左右全是TreeNode，搞得我直接跳了30题，这样还做甚么咯……好8开始xjb自学……
 
