--- a/20. Valid Parentheses.md
+++ b/20. Valid Parentheses.md
@@ -1,4 +1,4 @@
-# 20. Valid Parentheses
+# 20. Valid Parentheses (easy)
 
 ## Description
 
@@ -42,14 +42,43 @@ Output: true
 
 > Related Topics: Stack
 
-> Related Questions:
+开始的时候把题目看错了，以为是要有左必有右就可以，很诧异怎么能使用Stack……后来才发现原来必须要最近匹配！！<BR>
+类似'([)]'是不符合题目要求的。<BR>
+这样的话题目就很简单了。每当是左括号的时候，将其压入栈中，当是右括号时，将栈顶元素弹出，并验证当前元素与栈顶元素是否相互匹配，如果不匹配返回false。<BR>
 
+弹出元素时必须保证栈内有元素，否则会报EmptyStackException。因此弹出元素前确认栈是否为空，若为空则随便压入一个非括号的元素即可。
 
 ## Code
 
 ```java
-
+class Solution20 {
+    public boolean isValid(String s) {
+        
+        if (s.length() % 2 != 0) return false;
+        
+        Map<Character, Character> dict = new HashMap<>();
+        dict.put(')','(');
+        dict.put('}','{');
+        dict.put(']','[');
+        
+        Stack<Character> stack = new Stack<>();
+        for (int i = 0; i < s.length(); i++) {
+            char temp = s.charAt(i);
+            // if this char is a left parenthese, push it into the stack
+            if (!dict.containsKey(temp)) stack.push(temp);
+            else {
+                // if this char is a right parenthese, check whether it is valid
+                // if the stack is empty, we could not pop anything
+                char pair = stack.empty()? '0' : stack.pop();
+                if (pair != dict.get(temp)) return false;
+            }
+        }     
+        return stack.empty();
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 2 ms, faster than 87.28% of Java online submissions for Valid Parentheses.<br>
+Memory Usage: 35.6 MB, less than 36.97% of Java online submissions for Valid Parentheses.
