Linked List, Two Pointers
RQ: 2, 21

--- a/19. Remove Nth Node From End of List.md
+++ b/19. Remove Nth Node From End of List.md
@@ -27,7 +27,7 @@ Could you do this in one pass?
 
 > Related Topics: Linked List, Two Pointers
 
-> Related Questions: [LC2. Add Two Numbers](https://github.com/Zingg7/LeetCode/blob/master/2.%20Add%20Two%20Numbers.md)
+> Related Questions: [LC2. Add Two Numbers](https://github.com/Zingg7/LeetCode/blob/master/2.%20Add%20Two%20Numbers.md), [LC21. Merge Two Sorted Lists](https://github.com/Zingg7/LeetCode/blob/master/21.%20Merge%20Two%20Sorted%20Lists.md)
 
 这里需要删除链表的倒数第n个节点。如果是正数节点，可以直接用一个n即可得到了。<br>
 但是题目要求是倒数，那么我们可以同时用两个指针，先让一个指针先走n步，等到第一个指针走完n步以后，让另一个指针开始走，直到第一个指针走到了末尾。
