--- a/22. Generate Parentheses.md
+++ b/22. Generate Parentheses.md
@@ -37,14 +37,48 @@ Backtracking: [LC39. ](https://leetcode.com/problems/combination-sum/)[Combinati
 [LC90. ](https://leetcode.com/problems/subsets-ii/)[Subsets ](),
 [LC131. ](https://leetcode.com/problems/palindrome-partitioning/)[Palindrome Partitioning]()
 
+这题我觉得出的很好！（才不是因为我刚开始搞半天没搞懂）
+其实这种题最好是别想太多，按照题目要求来做就是了。如果想太多容易晕，尤其是backtracking这种一个套一个一个结束跳回原来的这种……（都是我太菜的原因）
 
+所有backtracking的题都是一个套路，每一次完成当前的任务，根据本次操作对下次操作的影响，改变约束条件。<br>
+题目中要求所有有效组合，那么我们需要知道究竟什么样是有效的：1.产生的括号对数为题目所要求的的对数；2. 每一个右括号在左方都能找到与它对应的一个左括号。<br>
+因此，我们用两个变量分别记录左括号与右括号的个数，每当添加一个括号后，将对应的变量+1，再进入相对应的方法。
 
 
 ## Code
 
 ```java
-
+class Solution22 {
+    public List<String> generateParenthesis(int n) {
+        List<String> res = new ArrayList<>();
+        sub(res, new StringBuilder(), n, 0, 0);
+        return res;
+    }
+    
+    private void sub(List<String> res, StringBuilder temp, int length, int left, int right) {
+        if (temp.length() == 2*length){
+            res.add(temp.toString());
+            return;
+        }
+        
+        if (left < length) {
+            // when the left parentheses are less than required, add one
+            temp.append('(');
+            sub(res, temp, length, left+1, right);
+            // remove the last to try other choices
+            temp.deleteCharAt(temp.length()-1);
+        } 
+        if (right < left) {
+            // when the right parentheses are less than left, add one
+            temp.append(')');
+            sub(res, temp, length, left, right+1);
+            temp.deleteCharAt(temp.length()-1);
+        }
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 0 ms, faster than 100.00% of Java online submissions for Generate Parentheses.<br>
+Memory Usage: 39.9 MB, less than 9.09% of Java online submissions for Generate Parentheses.
