--- a/34. Find First and Last Position of Element in Sorted Array.md
+++ b/34. Find First and Last Position of Element in Sorted Array.md
@@ -25,9 +25,12 @@ Output: [-1,-1]
 
 > Related Topics: Binary Search
 
-> Related Questions: [LC31. ](https://leetcode.com/problems/next-permutation/)[Next Permutation](https://github.com/Zingg7/LeetCode/blob/master/31.%20Next%20Permutation.md)
+> Related Questions: [LC31. ](https://leetcode.com/problems/next-permutation/)[Next Permutation](https://github.com/Zingg7/LeetCode/blob/master/31.%20Next%20Permutation.md), [LC81. ](https://leetcode.com/problems/search-in-rotated-sorted-array-ii/)[Search in Rotated Sorted Array II](https://github.com/Zingg7/LeetCode/blob/master/81.%20Search%20in%20Rotated%20Sorted%20Array%20II.md)
 
 这道题还是和LC33&81相同，使用二分搜索法完成查找。这里需要找到首次出现和最后出现的位置，因此可以分两个循环，分别找到其坐标即可。
+
+寻找起始位置: 创造两个指针指向两端，创造变量mid指向中间;当left<right时，若mid>=target，则证明目标元素在左半边(当mid=target时，mid处可能为起始，也可能只是目标值重复序列中的一个，因此新的搜索范围为0~mid，包含mid)，若mid<target，则目标元素在右半边(mid+1~nums。length-1)，循环搜索;当left=right时跳出循环，该数应为target(若非target则证明数组中不存在target，返回-1)，将其赋给结果res数组。
+寻找终止位置: 实际上是寻找数组target后第一个非target的位置(寻找target时，并不确定其是否为最后一个，只有当其后为非target数时，才能证明它才是最后一个target)。依旧使用指针搜索，循环的标志是left<right。当mid<=target时，无论nums[mid]是否等于target，均不是我们寻找的元素，因此寻找范围为mid+1~nums。length;当mid>target时，由于其大于target，因此仍有可能为实际寻找的位置，因此寻找的范围为0~mid;当left=right时跳出循环，right-1即为最后一个target的位置，将其赋给结果res数组，返回。
 
 需要注意的是当判断最后出现的位置，处理到最后相邻的两位数且左边为所求值时，由于Integer的特性，使得mid会不断重复出现在左侧。<br>
 因此判断mid可以直接取left+(right-left)/2+1，即可避免该情况。
