--- a/38. Count and Say.md
+++ b/38. Count and Say.md
@@ -1,4 +1,4 @@
-# 38. Count and Say
+# 38. Count and Say (easy)
 
 ## Description
 
@@ -28,6 +28,8 @@ Example 2:
 Input: 4
 Output: "1211"
 
+将数字按"几个几"的形式依次输出,每一次以前一个数为母本
+
 ```
 
 
@@ -35,7 +37,8 @@ Output: "1211"
 
 > Related Topics: String
 
-
+我们需要输出第n个字符串，且每次字符串都是根据前一个字符串的数字排列得到的。因此我们考虑使用while循环，每次生成该轮字符串后+1，直到得到第n轮生成的字符。每一轮时只需考虑该轮如何生成目标字符串即可。<br>
+为了生成目标字符串，首先我们必须对母本进行遍历。检查指针指向的字符是否与下一个字符相同，若相同，则记录下重复次数(此时是不间断检查，因此也需使用while循环)。同时当捕捉到重复字符时，指针也应当向右移动。当无重复时，将记录的重复次数与重复的数字加入中间字符串。当对母本遍历完成后，将中间字符串赋值给result，即得到了该轮的目标字符串。
 
 
 ## Code
@@ -49,13 +52,18 @@ class Solution38 {
             StringBuilder res = new StringBuilder();
             int count = 1;
             for (int i = 1; i < temp.length(); i++) {
+                // same char, add the count
                 if (temp.charAt(i) == temp.charAt(i-1)) count ++;
                 else {
+                    /* when we encounter a new char, we should append the consecutive sequence before this 
+                     * char to the res string, and reset the count to 1
+                     */
                     res.append(count);
                     res.append(temp.charAt(i-1));
                     count = 1;
                 }
             }
+            // append the final char sequence to res
             res.append(count);
             res.append(temp.charAt(temp.length()-1));
             temp = res;
