--- a/39. Combination Sum.md
+++ b/39. Combination Sum.md
@@ -41,14 +41,15 @@ A solution set is:
 
 > Related Topics: Backtracking
 
-> Related Questions: [LC 40.](https://leetcode.com/problems/combination-sum-ii/)[Combination Sum II]()
+> Related Questions: [LC 40. ](https://leetcode.com/problems/combination-sum-ii/)[Combination Sum II](https://github.com/Zingg7/LeetCode/blob/master/40.%20Combination%20Sum%20II.md)
 
-emmm~ 写过了没带回来QVQ 明天粘过来
+为了得到符合结果的所有情况，我们应当依次尝试数组内的所有元素。我们可以创建一个临时数组temp，每次向List中加入一个元素s，此时目标target便成为了target-s，当新的target>0时，继续以原数组为基础，向内添加元素。直到target=0时，满足题意，将该临时数组加入开始创建的res二维数组。这时我们可以继续检查，将临时数组temp中的最后一位删除，继续检查原数组的其他元素。当原数组内所有元素全部被检查到，再多删除一位元素，依次类推，填充后方元素。
+
 
 ## Code
 
 ```java
-class Solution {
+class Solution39 {
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
         List<List<Integer>> res = new ArrayList<>();
         combination(res, new ArrayList<>(), candidates, target, 0);
