--- a/40. Combination Sum II.md
+++ b/40. Combination Sum II.md
@@ -5,8 +5,8 @@
 > Link: https://leetcode.com/problems/combination-sum-ii/
 
 ```
-Given a collection of candidate numbers (candidates) and a target number (target), find all unique combinations 
-in candidates where the candidate numbers sums to target.
+Given a collection of candidate numbers (candidates) and a target number (target), find all unique 
+combinations in candidates where the candidate numbers sums to target.
 
 Each number in candidates may only be used once in the combination.
 
@@ -33,7 +33,7 @@ A solution set is:
   [5]
 ]
 
-
+给定数组candidates，寻找数组内相加和为target的所有情况（数组内元素有重复，同一元素不可多次使用）
 
 ```
 
@@ -42,8 +42,11 @@ A solution set is:
 
 > Related Topics: Backtracking
 
-> Related Questions: 
+> Related Questions: [LC 39. ](https://leetcode.com/problems/combination-sum/)[Combination Sum](https://github.com/Zingg7/LeetCode/edit/master/39.%20Combination%20Sum.md)
 
+这题和LC39几乎一样，只是
+1. 不能重复使用：每次回溯是将star+1，而不是继续从start处开始
+2. 数组内元素有重复：遍历时若当前元素与前一元素相同，则跳过本次循环
 
 ## Code
 
@@ -75,8 +78,6 @@ class Solution40 {
             }
         }
     }
-    
-
 }
 ```
 
