--- a/46. Permutations.md
+++ b/46. Permutations.md
@@ -48,22 +48,27 @@ Output:
 class Solution46 {
     public List<List<Integer>> permute(int[] nums) {
         List<List<Integer>> res = new ArrayList<>();
-        permute(res, new ArrayList<>(), nums, new boolean[nums.length], 0);
+        permuteSub(res, new ArrayList<>(), nums, new boolean[nums.length], 0);
         return res;
     }
     
-    private void permute(List<List<Integer>> res, List<Integer> temp, int[] nums, boolean[] visited, 
-    int length) {
+    private void permuteSub(List<List<Integer>> res, List<Integer> temp, int[] nums, boolean[] visited, int length) {
+        // when the length reaches the requirement, return        
         if (length == nums.length) {
             res.add(new ArrayList<>(temp));
             return;
         }
         
+        // else, try to create the result
         for (int i = 0; i < nums.length; i++) {
+            // if this char has been visited, we could not add it to the result
             if (visited[i] == true) continue;
+            // else, add it to the temp list
             visited[i] = true;
             temp.add(nums[i]);
-            permute(res, temp, nums, visited, length+1);
+            // try to find out the next char
+            permuteSub(res, temp, nums, visited, length+1);
+            // when we jump out of the circle
             visited[i] = false;
             temp.remove(temp.size()-1);
         }
