--- a/26. Remove Duplicates from Sorted Array.md
+++ b/26. Remove Duplicates from Sorted Array.md
@@ -53,7 +53,7 @@ for (int i = 0; i < len; i++) {
 ## Code
 
 ```java
-class Solution {
+class Solution26 {
     public int removeDuplicates(int[] nums) {
         if (nums.length <= 1) return nums.length;
         int now = nums[0], count = 1;
