--- a/50. Pow(x, n).md
+++ b/50. Pow(x, n).md
@@ -34,13 +34,31 @@ n is a 32-bit signed integer, within the range [−231, 231 − 1]
 
 > Related Topics: Math, Binary Search
 
+这道题的面试频率很高，题目的要求是求x的n次方。<br>
+要想用较为简便的方法算出结果，可以想到使用折半的方法简化计算步骤。<br>
+不停的将原数折半，当数为偶数时，表示它的结果为下一个数的平方；当数为奇数时，表示他的结果为下个数的平方*(/)x，以此类推得到最终的结果。<br>
+1) 当n为0时，返回1
+2) 创造变量half(double)，值为下一个数，即pow(x，n/2)，进行递归运算
+3) 当n为2的倍数时，返回half*half
+4) 当n不为2的倍数且大于0时，返回half*half*x
+5) 当n<0时，返回half*half/x
 
 
 ## Code
 
 ```java
-
+class Solution50 {
+    public double myPow(double x, int n) {
+       if (n == 0) return 1;
+       double half = myPow(x, n / 2);
+       if (n % 2 == 0) return half * half;
+       if (n % 2 > 0) return half * half * x;
+       return half * half / x;
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 0 ms, faster than 100.00% of Java online submissions for Pow(x, n).<br>
+Memory Usage: 32.7 MB, less than 100.00% of Java online submissions for Pow(x, n).
