--- a/283. Move Zeroes.md
+++ b/283. Move Zeroes.md
@@ -2,7 +2,7 @@
 
 ## Description
 
-> Link: 
+> Link: https://leetcode.com/problems/move-zeroes/
 
 ```
 Given an array nums, write a function to move all 0's to the end of it while maintaining the relative order 
@@ -31,10 +31,11 @@ Minimize the total number of operations.
 若当前非零则存入慢指针对应的位置中，每次将快指针+1，直到到达数组的尾部。将慢指针剩余的位置填上0。
 
 
-## Code
 
+## Code
+Solution 1: 
 ```java
-class Solution {
+class Solution283 {
     public void moveZeroes(int[] nums) {
         int count = 0, index = 0;
         while(count < nums.length) {
@@ -53,7 +54,11 @@ class Solution {
     }
 }
 ```
+Solution 2: 
+```java
 
+
+```
 
 ## Submission details
 Runtime: 0 ms, faster than 100.00% of Java online submissions for Move Zeroes.<br>
