--- a/43. Multiply Strings.md
+++ b/43. Multiply Strings.md
@@ -5,8 +5,8 @@
 > Link: https://leetcode.com/problems/multiply-strings/
 
 ```
-Given two non-negative integers num1 and num2 represented as strings, return the product of num1 and num2, also 
-represented as a string.
+Given two non-negative integers num1 and num2 represented as strings, return the product of num1 and num2,
+also represented as a string.
 
 Example 1:
 
@@ -23,7 +23,7 @@ Both num1 and num2 contain only digits 0-9.
 Both num1 and num2 do not contain any leading zero, except the number 0 itself.
 You must not use any built-in BigInteger library or convert the inputs to integer directly.
 
-给出两以字符串形式表示的数,以字符串形式返回它们两的乘积
+给出两以字符串形式表示的数，以字符串形式返回它们两的乘积
 
 ```
 
@@ -32,14 +32,60 @@ You must not use any built-in BigInteger library or convert the inputs to intege
 
 > Related Topics: Math. String
 
-> Related Questions:
+这道题让我们求乘积，肯定是不能直接乘起来得到答案啦，这里用到的是我们平时笔算乘法时的方法。<br>
+从后往前依次分别对每一个数相乘，按位加和，进位保留，得到最终的答案。<br>
+例如：<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2&nbsp;&nbsp;&nbsp;1<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8&nbsp;&nbsp;&nbsp;9<br>
+————————<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(18) 9 <br>
+&nbsp;&nbsp;&nbsp;(16)&nbsp;&nbsp;8 <br>
+————————<br>
+&nbsp;&nbsp;&nbsp;(16)(26) 9   …… ①<br>
+————————<br>
+1&nbsp;&nbsp;&nbsp;8&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;9 &nbsp;  …… ②<br>
+ 
+这里主要思路不是很难，但是如何简化步骤才是最重要的。<br>
+
+常规思路是对各位数分别相乘，得到①处的结果，再遍历将进位的结果加入到对应的位中，得到②。最后还需要取出头部的零（如果有），输出最后的结果。<br>
+这里包含了三个循环，但是实际上可以将1.2两个循环合并，直接在加的时候将进位一同合并。<br>
+如上述例子，我们每次将两数相乘，数字在所在的序号相加和相同的会存储到同一位置中（例如第一个数的1位\*第二个数的0位&第二个数的0位\*第一个数的1位，在结果中均为1位）。因此，我们考虑可以创建一个新的数组，存储得到的结果，数组的长度即为两数位数之和。<br>
+
+那么，最后的答案应该如何得到呢？<br>
+根据上例我们了解到，第一个数的第i位\*第二个数的第j位，得到的结果位于结果数组的第i+j+1位。该位上的值为当前和的个位+进位，并且我们需要将它的进位存至前一位，即结果数组的第i+j位。<br>
+因此，我们实际解决过程中应该这样操作：首先获得"第一个数的第i位\*第二个数的第j位"对应的值，将其值与上一位获得的进位相加，得到结果sum。sum对10的余数为当前获得的结果，将其赋值给结果数组的第i+j+1位。sum对10的除数为当前值的进位，同时应加上之前可能有的进位（i+j相同的其他未），将其赋值给结果数组的第i+j位。<br>
+
+
 
 
 ## Code
 
 ```java
-
+class Solution43 {
+    public String multiply(String num1, String num2) {
+        int m = num1.length(), n = num2.length();
+        
+        int carry = 0;
+        int[] nums = new int[m+n];
+        for (int i = m - 1; i >= 0; i--) {
+            for (int j = n - 1; j >= 0; j--) {
+                int temp = (num1.charAt(i)-'0') * (num2.charAt(j)-'0');
+                int sum = temp + nums[i+j+1];
+                nums[i+j] += sum / 10;
+                nums[i+j+1] = sum % 10;
+            }
+        }
+        StringBuilder res = new StringBuilder();
+        for (int num : nums) {
+            if (!(res.length() == 0 && num == 0)) res.append(num);
+        }
+        
+        return res.length() == 0 ? "0" : res.toString();
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 4 ms, faster than 95.72% of Java online submissions for Multiply Strings.<br>
+Memory Usage: 37.8 MB, less than 95.00% of Java online submissions for Multiply Strings.
