--- a/55. Jump Game.md
+++ b/55. Jump Game.md
@@ -32,15 +32,30 @@ Explanation: You will always arrive at index 3 no matter what. Its maximum
 
 > Related Topics: Array, Greedy
 
-> Related Questions:
+其实这道题挺简单的，不知道为什么是medium？<br>
 
-
+核心思路就是引入一个变量temp，遍历数组内所有的数，将当前能跳的最长距离存入temp（每次将当前元素能跳的距离与之前最远距离相比，将较远的那个存入）。<br>
+如果当前能跳的距离落在最后一个数或其后，表示能跳到，输出true。<br>
+但是肯定不是一直将整个数组遍历完的，不能成功跳到数组的末位的情况，如题目描述中的第二种情况，具有什么特点呢？<br>
+我们来看题目中的例子 [3,2,1,0,4]，当在3位时，之前最远能跳到的地方temp为3，当前位置能跳的距离也为3，判断的条件即为两个情况都该处不能向前跳且之前能跳的距离也不大于此处。
 
 ## Code
 
 ```java
-
+class Solution55 {
+    public boolean canJump(int[] nums) {
+        int maxLength = 0;
+        for (int i = 0; i < nums.length; i++) {
+            if (maxLength <= i && nums[i] == 0) break;
+            maxLength = Math.max(maxLength, nums[i] + i);
+            if (maxLength >= nums.length - 1) return true;
+        }
+        return maxLength >= nums.length - 1;
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 1 ms, faster than 99.96% of Java online submissions for Jump Game.<br>
+Memory Usage: 40.4 MB, less than 43.96% of Java online submissions for Jump Game.
