--- a/56. Merge Intervals.md
+++ b/56. Merge Intervals.md
@@ -29,14 +29,46 @@ method signature.
 
 > Related Topics: Array, Sort
 
-> Related Questions:
+对于这道题，我们需要思考，什么情况下数组序列会相互重叠呢？
 
+如题目中所给的例1，[1,3] & [2,6] 就发生了重叠，重叠的条件即为前一个数组的第二个值大于或等于后一个数组的第一个值。<br>
+依靠这一判断条件，当发生重叠时，输入前一个数组的第一个值与后一个数组的第二个值，即可完成了合并的操作。<br>
+
+但是，这里有一个小陷阱，如果出现例如[1,5] & [2,4] 这样的情况，单纯的按刚才的思路就输出了错误的结果。<br>
+解决方法可以为每次比较第二个值的大小，将较大的那一位输出；还有一个方法是直接取出所有数组的首位与末位，将其排序，然后在按上面的方法输出，即避免了上例中的情况。<br>
 
 ## Code
 
 ```java
-
+class Solution56 {
+    public int[][] merge(int[][] intervals) {
+        int[] left = new int[intervals.length], right = new int[intervals.length];
+        
+        for (int i = 0; i < intervals.length; i++) {
+            left[i] = intervals[i][0];
+            right[i] = intervals[i][1];
+        }
+        
+        Arrays.sort(left);
+        Arrays.sort(right);
+        
+        int[][] res = new int[intervals.length][2];
+        int length = 0;
+        for (int i = 0, j = 0; i < intervals.length; i++) {
+            if (i == intervals.length - 1 || right[i] < left[i+1]) {
+                res[length][0] = left[j];
+                res[length][1] = right[i];
+                j = i + 1;
+                length++;
+            }
+        }
+        res = Arrays.copyOf(res, length);
+        return res;
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 2 ms, faster than 100.00% of Java online submissions for Merge Intervals.<br>
+Memory Usage: 41.1 MB, less than 87.51% of Java online submissions for Merge Intervals.
