--- a/58. Length of Last Word.md
+++ b/58. Length of Last Word.md
@@ -26,14 +26,29 @@ Output: 5
 
 > Related Topics: String
 
-> Related Questions:
+这题比较简单，既然是要得到最后一个单词的长度，那么我们只需要从最后遍历，首先删除末尾的所有空characters，然后不停向前搜索，不是空串那么将计数加一，直到搜索到空串或者搜索到第0位。
 
 
 ## Code
 
 ```java
-
+class Solution58 {
+    public int lengthOfLastWord(String s) {
+        int n = s.length()-1;
+        while (n >= 0 && s.charAt(n) == ' '){
+            n--;
+        }
+        int res = 0;
+        while (n >= 0 && s.charAt(n) != ' '){
+            n--;
+            res++;
+        }
+        return res;
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 0 ms, faster than 100.00% of Java online submissions for Length of Last Word.<br>
+Memory Usage: 37.2 MB, less than 19.91% of Java online submissions for Length of Last Word.
