--- a/59. Spiral Matrix II.md
+++ b/59. Spiral Matrix II.md
@@ -26,14 +26,54 @@ Output:
 
 > Related Topics: Array
 
-> Related Questions:
+> Related Questions: [LC 54.]((https://leetcode.com/problems/spiral-matrix/)[Sprial Matrix](https://github.com/Zingg7/LeetCode/blob/master/54.%20Spiral%20Matrix.md)
 
+这道题和LC54是一样的，思路也完全相似，就不赘述了。
+
+有一点相比于LC54中写的可以优化的是，由于这次输入的col和row相同，我们可以直接通过已经输出的字符数直接判断是否输入完成，这样就不用在每回第三、四次转向的时候继续判断是否越界了。
 
 ## Code
 
 ```java
-
+class Solution59 {
+    public int[][] generateMatrix(int n) {
+        int[][] res = new int[n][n];
+        
+        if (n == 0){
+            return res;
+        }
+        
+        int count = 1;
+        int rowS = 0, rowE = n - 1;
+        int colS = 0, colE = n - 1;
+        
+        while (count <= n*n){
+            for (int i = colS; i <= colE; i++){
+                res[rowS][i] = count++;
+            }
+            rowS++;
+            
+            for (int i = rowS; i <= rowE; i++){
+                res[i][colE] = count++;
+            }
+            colE--;
+            
+            for (int i = colE; i >= colS; i--){
+                res[rowE][i] = count++;
+            }
+            rowE--;
+            
+            for (int i = rowE; i >= rowS; i--){
+                res[i][colS] = count++;
+            }
+            colS++;
+        }
+        return res;
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 0 ms, faster than 100.00% of Java online submissions for Spiral Matrix II.<br>
+Memory Usage: 33 MB, less than 100.00% of Java online submissions for Spiral Matrix II.
