--- a/59. Spiral Matrix II.md
+++ b/59. Spiral Matrix II.md
@@ -26,11 +26,11 @@ Output:
 
 > Related Topics: Array
 
-> Related Questions: [LC 54.]((https://leetcode.com/problems/spiral-matrix/)[Sprial Matrix](https://github.com/Zingg7/LeetCode/blob/master/54.%20Spiral%20Matrix.md)
+> Related Questions: [LC 54.](https://leetcode.com/problems/spiral-matrix/)[Sprial Matrix](https://github.com/Zingg7/LeetCode/blob/master/54.%20Spiral%20Matrix.md)
 
 这道题和LC54是一样的，思路也完全相似，就不赘述了。
 
-有一点相比于LC54中写的可以优化的是，由于这次输入的col和row相同，我们可以直接通过已经输出的字符数直接判断是否输入完成，这样就不用在每回第三、四次转向的时候继续判断是否越界了。
+有一点相比于LC54中写的可以优化的是，由于这次输入的col和row相同，我们可以直接通过已经输出的字符数直接判断是否输入完成，并且每次输出的字符不是依靠原数组而是根据当前循环的总个数得到(count)，而不是根据原数组的数。这样就不用在每回第三、四次转向的时候继续判断是否越界了。
 
 ## Code
 
