--- a/283. Move Zeroes.md
+++ b/283. Move Zeroes.md
@@ -27,10 +27,11 @@ Minimize the total number of operations.
 
 > Related Questions: [LC26. ](https://leetcode.com/problems/remove-duplicates-from-sorted-array/) [Remove Duplicates from Sorted Array](https://github.com/Zingg7/LeetCode/blob/master/26.%20Remove%20Duplicates%20from%20Sorted%20Array.md)
 
-比较简单的一题，和LC26差不多，用两个指针分别指示当前遍历的元素，快指针用来指示当前遍历到的元素，慢指针用来指示非零元素。
+比较简单的一题，和LC26差不多，用两个指针分别指示当前遍历的元素，快指针用来指示当前遍历到的元素，慢指针用来指示非零元素。<br>
 若当前非零则存入慢指针对应的位置中，每次将快指针+1，直到到达数组的尾部。将慢指针剩余的位置填上0。
 
-
+又发现还有一种更简单的方法。时间复杂度是一样的，但是整体更简单。<br>
+设置一个变量存储当前发现的非零数，遍历数组，每当发现非零的数时，就将其移植上一个非零元素的后面。这样将所有非零元素都放在最前面，最后再将剩下的位置补零。
 
 ## Code
 Solution 1: 
@@ -56,10 +57,21 @@ class Solution283 {
 ```
 Solution 2: 
 ```java
-
-
+class Solution {
+    public void moveZeroes(int[] nums) {
+        int index = 0
+        for (int i = 0; i < nums.length; i++) {
+            if (nums[i] != 0) nums[index++] = nums[i];
+        }
+        
+        for (int i = index; i < nums.length; i++) {
+            nums[i] = 0;
+        }
+    }
+}
 ```
 
 ## Submission details
+两个的运行情况都一样<br>
 Runtime: 0 ms, faster than 100.00% of Java online submissions for Move Zeroes.<br>
 Memory Usage: 38.2 MB, less than 94.46 % of Java online submissions for Move Zeroes.
