--- a/283. Move Zeroes.md
+++ b/283. Move Zeroes.md
@@ -57,7 +57,7 @@ class Solution283 {
 ```
 Solution 2: 
 ```java
-class Solution {
+class Solution283 {
     public void moveZeroes(int[] nums) {
         int index = 0
         for (int i = 0; i < nums.length; i++) {
