--- a/33. Search in Rotated Sorted Array.md
+++ b/33. Search in Rotated Sorted Array.md
@@ -36,8 +36,7 @@ Output: -1
 > Related Questions: [LC81. ](https://leetcode.com/problems/search-in-rotated-sorted-array-ii/)[Search in Rotated Sorted Array II]()
 
 这道题中说明了不会出现重复的字符，所以还是比较简单的~
-由于数列是有序的，只是被旋转过了，那么如果我们从中间断开，左右必有一边是有序的。检查数列左右部分，若该部分的头元素的值小于尾元素，则为有序。
-当得到有序的一边后，根据其范围，判断目标数是否在其中，确定新的检查范围。
+由于数列是有序的，只是被旋转过了，那么如果我们从中间断开，左右必有一边是有序的。检查数列左右部分，若该部分的头元素的值小于尾元素，则为有序。 当得到有序的一边后，其左右两数为该范围内的最小与最大值，通过此可以判断target是否在该区间内，确定新的检查范围。
 
 这题思路不难，主要是边界的判断很重要。
 
