--- a/81. Search in Rotated Sorted Array II.md
+++ b/81. Search in Rotated Sorted Array II.md
@@ -28,38 +28,45 @@ Would this affect the run-time complexity? How and why?
 
 ## Solution
 
-> Related Topics: Backtracking
+> Related Topics: Binary Search
 
-> Related Questions:
+> Related Questions: [LC 33. ](https://leetcode.com/problems/search-in-rotated-sorted-array/)[Search in Rotated Sorted Array](https://leetcode.com/problems/search-in-rotated-sorted-array/)
 
-心不静，不适合做题。
+和LC33一样。由于本题输入中可能会有重复数字，会影响对递增区间的判断。<br>
+分别讨论：<br>
+1. 当重复数字位于数列中部时，没啥影响。如 7,8,8,9,0,0,1<br>
+2. 当重复数字跨越头尾时<br>
+1） 单纯位于头尾：如1,2,2,2,1，没啥影响；<br>
+2）头尾+跨越一半：如1,1,1,2,1，由于都等于中位数，导致判断不出哪边递增，这时候由于中位数不是目标，可以直接将左右两边直接内缩一格；<br>
+3）全部一样：1,1,1,1,1,1,1，跟2）相同<br>
+3. 重复数字占据一半时，如5,1,1,1,1或1,1,1,1,5，没啥影响，注意先判断递增或递减的那一边要包含等于（例如5,1,1,1,1，如果不包含等于，认为右边非递增，即默认左边递增，为错误判断）<br>
+综上所述只有重复数字跨越头尾且占据一半的时候才会影响判断，当此时左右各向内缩一格就可以了。<br>
 
 ## Code
 
 ```java
 class Solution81 {
     public boolean search(int[] nums, int target) {
-        if (nums == null || nums.length == 0) return false;
+        if (nums == null  nums.length == 0) return false;
         
         int left = 0, right = nums.length - 1;
-        
-        while (left < right) {
-            // 1,1,3,1   1,3,1,1,1
+        while (left + 1 < right) {
             int mid = left + (right - left) / 2;
-            if (nums[mid] == target) return true;
-            
-            if (nums[left] == nums[mid] && nums[mid] == nums[right]) {left++; right--;}
-            else {
-                if (nums[left] <= nums[mid]) {
-                    if (nums[left] <= target && nums[mid] > target) right = mid - 1;
-                    else left = mid + 1;
-                } else {
-                    if (nums[mid] < target && nums[right] >= target) left = mid + 1;
-                    else right = mid - 1;
-                }
+            if (nums[mid] == target) return true; // the same ↑
+          	// add this line
+            else if (nums[mid] == nums[left] && nums[mid] == nums[right]) {
+                left ++; right --; // others are the same ↓
+            } else if (nums[mid] <= nums[right]) {
+                if (nums[mid] < target && nums[right] >= target)  left = mid;
+                else right = mid;
+            } else {
+                if (nums[left] <= target && nums[mid] > target) right = mid;
+                else left = mid;
             }
         }
-        return nums[left] == target;
+        if (nums[left] == target) return true;
+        else if (nums[right] == target) return true;
+        else return false;
     }
 }
 ```
