--- a/705&706. Design HashSet&HashMap.md
+++ b/705&706. Design HashSet&HashMap.md
@@ -14,8 +14,10 @@ add(value): Insert a value into the HashSet.
 contains(value) : Return whether the value exists in the HashSet or not.
 remove(value): Remove a value in the HashSet. If the value does not exist in the HashSet, do nothing.
 HashMap:
-put(key, value) : Insert a (key, value) pair into the HashMap. If the value already exists in the HashMap, update the value.
-get(key): Returns the value to which the specified key is mapped, or -1 if this map contains no mapping for the key.
+put(key, value) : Insert a (key, value) pair into the HashMap. If the value already exists in the HashMap, 
+update the value.
+get(key): Returns the value to which the specified key is mapped, or -1 if this map contains no mapping for 
+the key.
 remove(key) : Remove the mapping for the value key if this map contains the mapping for the key.
 
 Example:
@@ -57,23 +59,136 @@ Please do not use the built-in HashMap library.
 
 > Related Questions: [LC705.](https://leetcode.com/problems/design-hashset/)[Design HashSet]()
 
-这题让我们设计HashSet&HashMap，但是不能使用自带的HashMap。
-HashSet&HashMap的特点就是查找的时间复杂度为O(1)，那么我们自己设计的时候也必须要满足这样的一个条件。既然不能用HashMap，那就只能用空间换时间了~ 题目的备注中写了key和value的范围在[0, 1000000]，因此我们需要开一个1000000的空间，当加数的时候，将其值设置为1，删除时设置为0，对于HashMap，containsKey函数即为查询其值是否为1。
+这题让我们设计HashSet&HashMap，但是不能使用自带的HashMap。<br>
+HashSet&HashMap的特点就是查找的时间复杂度为O(1)，那么我们自己设计的时候也必须要满足这样的一个条件。既然不能用HashMap，那就只能用空间换时间了~ 题目的备注中写了key和value的范围在[0, 1000000]，因此我们需要开一个1000001的空间，这样子每一个值都有自己独立的一个空间。当加数的时候，将其值设置为它的value，删除时设置为-1，对于HashMap，containsKey函数即为查询其值是否为存在。
 
-还没写完回家再写~
+我们也可以减小创建的空间，降低时间复杂度。由于放入表中的数字跨度并不一定很大，我们可以创建一个1000000/n的空间，每次根据"哈希值%总空间"的值来决定放在哪一个位置，也就是"address = key Mod space"，如果放入后产生了碰撞，则将其连接到上一个节点之后。具体的原理可以参照下面的两篇Reference~ 讲的非常清楚。
+
 
 
 ## Code
-
+Solution1: 
 ```java
+class MyHashMap {
 
+    /** Initialize your data structure here. */
+    int[] map;
+    public MyHashMap() {
+        map = new int[1000000];
+        Arrays.fill(map,-1);
+    }
+    
+    /** value will always be non-negative. */
+    public void put(int key, int value) {
+        map[key] = value;
+    }
+    
+    /** Returns the value to which the specified key is mapped, or -1 if this map contains no mapping 
+     * for the key
+     */
+    public int get(int key) {
+        return map[key];
+    }
+    
+    /** Removes the mapping of the specified value key if this map contains a mapping for the key */
+    public void remove(int key) {
+        map[key] = -1;
+    }
+}
+
+/**
+ * Your MyHashMap object will be instantiated and called as such:
+ * MyHashMap obj = new MyHashMap();
+ * obj.put(key,value);
+ * int param_2 = obj.get(key);
+ * obj.remove(key);
+ */
+```
+Solution2: 
+```java
+class MyHashMap {
+
+    ListNode[] nodes = new ListNode[10000];
+    /** Initialize your data structure here. */
+    public MyHashMap() {
+        
+    }
+    
+    public int index(int key) {
+        return Integer.hashCode(key) % nodes.length;
+    }
+    
+    /** value will always be non-negative. */
+    public void put(int key, int value) {
+        int currIndex = index(key);
+        if (nodes[currIndex] == null) {
+            nodes[currIndex] = new ListNode(-1,-1);
+        }
+        ListNode prev = find(nodes[currIndex], key);
+        if (prev.next == null) {
+            prev.next = new ListNode(key, value);
+        } else {
+            prev.next.val = value;
+        }
+    }
+    
+    /** Returns the value to which the specified key is mapped, or -1 if this map contains no mapping 
+     * for the key
+     */
+    public int get(int key) {
+        int currIndex = index(key);
+        if (nodes[currIndex] == null) return -1;
+        ListNode node = find(nodes[currIndex], key);
+        return node.next == null ? -1: node.next.val;
+    }
+    
+    /** Removes the mapping of the specified value key if this map contains a mapping for the key */
+    public void remove(int key) {
+        int currIndex = index(key);
+        if (nodes[currIndex] == null) return;
+        ListNode node = find(nodes[currIndex], key);
+        if (node.next == null) return;
+        node.next = node.next.next;
+    }
+    
+    public ListNode find(ListNode bucket, int key) {
+        ListNode node = bucket, prev = null;
+        while (node != null && node.key != key) {
+            prev = node;
+            node = node.next;
+        }
+        return prev;
+    }
+    
+    class ListNode {
+        int key, val;
+        ListNode next;
+        
+        ListNode(int key, int val) {
+            this.key = key;
+            this.val = val;
+        }
+    }
+}
+
+/**
+ * Your MyHashMap object will be instantiated and called as such:
+ * MyHashMap obj = new MyHashMap();
+ * obj.put(key,value);
+ * int param_2 = obj.get(key);
+ * obj.remove(key);
+ */
 ```
 
-
 ## Submission details
+Solution1:<br>
+Runtime: 69 ms, faster than 52.80% of Java online submissions for Design HashMap.<br>
+Memory Usage: 58.3 MB, less than 31.03% of Java online submissions for Design HashMap.<br>
+Solution2:<BR>
+Runtime: 62 ms, faster than 98.34% of Java online submissions for Design HashMap.<br>
+Memory Usage: 49.7 MB, less than 94.17% of Java online submissions for Design HashMap.
   
-
-
+  
 ## Reference
 [How HashMap works in Java? With Animation!! whats new in java8 tutorial](https://www.youtube.com/watch?v=c3RVW3KGIIE)<br>
 [Hash Tables and Hash Functions](https://www.youtube.com/watch?v=KyUTuwz_b7Q)
