--- a/286. Walls and Gates.md
+++ b/286. Walls and Gates.md
@@ -37,23 +37,75 @@ After running your function, the 2D grid should be:
 
 需要寻找离最近的门的距离，那么我们可以搜寻grid中所有的门，每找到一个门后，以门为中心进行DFS/BFS遍历，来到一个可达到的房间，记录下当前的距离。
 
-首先来看一下DFS的操作：
+首先来看一下DFS的操作：<br>
 遍历整个数组，每当找到一个门，就执行一个dfs操作。也就是说，从起点开始，我们来到它每一个可能到达的房间。在dfs中，我们需要传递一个参数count，代表目前行走的距离，每当我们向四个方向行走一步时，将距离+1即可。同时我们需要传递原数组rooms，若比原来小，则可以更新它的值。<br>
 在dfs函数中，我们首先要检查当前是否在有效范围内，即不超过边界且不为障碍物。若目前位置有效，那么就可以记录下当前的步长以便于传递给下一个位置，再继续遍历附近所有的房间。<br>
 遍历完成后即可。
 
-再来看看BFS的操作：
-BFS需要借助一个Queue来实现，我们首先将所有门的位置放入Queue，然后将Queue中的值poll出来，查找它上下左右的房间是否为空房间。为空房间时，则更新其与门的距离，距离获得的原理和DFS是一样的。每次更新距离后，都将其放入Queue中，重复操作。
+再来看看BFS的操作：<br>
+BFS需要借助一个Queue来实现，我们首先将所有门的位置放入Queue，然后将Queue中的值poll出来，查找它上下左右的房间是否为空房间。为空房间时，则更新其与门的距离，距离获得的原理和DFS是一样的。每次更新距离后，都将其放入Queue中，重复操作。<br>
 在BFS中，由于每次新的房间都被放在queue的最后，所以实际上Queue中房间对应的值必然是是呈上升趋势的。因此每次只需要检查当前遍历的房间对应的步长是否为空即可。
 
 DFS与BFS的时间复杂度都是O(m*n)，但是实际上DFS遍历了整个图k遍(k为数组中门的个数)，而BFS值遍历了1遍。所以还是BFS更优一些，运行时间也的确更短一点~
 
 
 ## Code
-
+Solution 1: DFS
 ```java
-
+public class Solution {
+    public void wallsAndGates(int[][] rooms) {
+        for (int i = 0; i < rooms.length; i++) {
+            for (int j = 0; j < rooms[i].length; j++) {
+                if (rooms[i][j] == 0) {
+                    dfs(i, j, 0, rooms);
+                }
+            }
+        }
+    }
+    
+    private void dfs(int i, int j, int count, int[][] rooms) {
+        if (i < 0 || j < 0 || i >= rooms.length || j >= rooms[i].length || count > rooms[i][j]) return;
+        
+        rooms[i][j] = count;
+        dfs(i-1, j, count+1, rooms);
+        dfs(i+1, j, count+1, rooms);
+        dfs(i, j-1, count+1, rooms);
+        dfs(i, j+1, count+1, rooms);
+    }
+}
 ```
 
+Solution 2: BFS
+```java
+public class Solution {
+    public void wallsAndGates(int[][] rooms) {
+        int[][] direction = {{1,0},{-1,0},{0,1},{0,-1}};
+        Queue<int[]> room = new LinkedList<>();
+        for (int i = 0; i < rooms.length; i++) {
+            for (int j = 0; j < rooms[i].length; j++) {
+                if (rooms[i][j] == 0) {
+                    room.add(new int[]{i,j});
+                }
+            }
+        }
+        
+        while (room.size() != 0) {
+            int[] curr = room.poll();
+            for (int i = 0; i < direction.length; i++) {
+                int newX = curr[0] + direction[i][0];
+                int newY = curr[1] + direction[i][1];
+                if (newX < 0 || newY < 0 || 
+                newX >= rooms.length || newY >= rooms[0].length || 
+                rooms[newX][newY] != Integer.MAX_VALUE) continue;
+                
+                rooms[newX][newY] = rooms[curr[0]][curr[1]] + 1;
+                room.add(new int[]{newX, newY});
+            }
+        }
+        
+    }
+}
+```
 
 ## Submission details
+等我买了会员
