--- a/79. Word Search.md
+++ b/79. Word Search.md
@@ -31,7 +31,7 @@ Given word = "ABCB", return false.
 
 > Related Topics: Array, Backtracking
 
-> Related Questions: [LC212. Word Search II](https://github.com/Zingg7/LeetCode/blob/master/212.%20Word%20Seach%20II.md)
+> Related Questions: [LC212. Word Search II](https://github.com/Zingg7/LeetCode/blob/master/212. Word Search II.md)
 
 在二维数组中寻找是否存在给定单词，单词可以转弯，但同一字母不可重复使用。
 
