--- a/212. Word Search II.md
+++ b/212. Word Search II.md
@@ -1,4 +1,4 @@
-# 212. Word Search II
+# 212. Word Search II (hard) 
 
 ## Description
 
@@ -32,14 +32,59 @@ Output: ["eat","oath"]
 
 > Related Questions: [LC 79. Word Search](https://github.com/Zingg7/LeetCode/blob/master/79.%20Word%20Search.md)
 
+这题是79题的延伸，用79题的方法也可以做，不过需要优化一下，不然就TLE了！
 
+上一题是找出是否存在给定的单词，这题是给了多个单词返回在数组中存在的单词。
+那么Brute Force的方法就是依次寻找每个单词，查看他们是否存在，如果存在，则将其加入List中。<br>
+单纯这样估计是不行的？还需要有点优化：当找到该单词时，跳出该循环。
 
 
 ## Code
-
+Solution 1:
 ```java
-
+class Solution212_1 {
+    public List<String> findWords(char[][] board, String[] words) {
+        List<String> result = new ArrayList<>();
+        boolean NotFound = true;
+        
+        for (String word : words) {
+            NotFound = true;
+            for (int i = 0; i < board.length && NotFound; i++) {
+                for (int j = 0; j < board[0].length && NotFound; j++) {
+                    if (board[i][j] == word.charAt(0) && dfs(board, word, 0, i, j)){
+                        result.add(word);
+                        NotFound = false;
+                    }
+                }
+            }
+        }
+       
+        return result;
+    }
+    
+    private boolean dfs(char[][] board, String word, int index, int i, int j) {
+        if (index == word.length())
+            return true;
+        
+        int m = board.length, n = board[0].length;
+        if (i < 0 || j < 0 || i >= m || j >= n || board[i][j] != word.charAt(index)) 
+            return false;
+        
+        char c = board[i][j];
+        board[i][j] = ' ';
+        
+        boolean res = dfs(board, word, index + 1, i+1, j) ||
+            dfs(board, word, index + 1, i-1, j) ||
+            dfs(board, word, index + 1, i, j+1) ||
+            dfs(board, word, index + 1, i, j-1);
+        
+        board[i][j] = c;
+        return res;
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 324 ms, faster than 20.46% of Java online submissions for Word Search II.<Br>
+Memory Usage: 38 MB, less than 100.00% of Java online submissions for Word Search II.
