--- a/10. Regular Expression Matching.md
+++ b/10. Regular Expression Matching.md
@@ -64,6 +64,9 @@ Output: false
 > Related Questions: [LC44. ](https://leetcode.com/problems/wildcard-matching/)[Wildcard Matching]()
 
 我的第一个hard!! 然后有个解法连答案都看不懂=_=<br>
+
+**Solution 1: Backtracking**
+
 回溯的方法还是很好理解的，主要分为几个步骤：
 - 特殊情况的讨论
 1. 当输入s与表达式p均为null，返回true
@@ -79,10 +82,26 @@ Output: false
     &nbsp;&nbsp;3.1.2. 否则，检查s的1位后子串与p的1位后子串是否匹配{s="aab", p="abb"}<br>
   3.2. 否则，若p的1位元素为"\*"，且s与p的2位后的子串匹配{s="abc", p="d\*abc"}，返回true
 
+<Br>
+
+**Solution 2: Dynamic Programming**
+
+```
+Test(i , j) = Test(i-1, j-1) ( if s(i) == p(j) (如S=ABCa，P=ABCa) or p(j)='.' (如S=ABCa，P=ABC.) )     ...（1）
+         OR= Test(i, j-2)    ( if p(j) == '*' (如S=Ab, P=ABC*)  )                                      ...（2）
+         OR= Test(i-1, j)    ( if p(j) == '*' && (s(i) == p(j-1) || p(j-1) == '.' ) (如S=ABc, P=ABC* ) ...（3）
+```
+注意一下，这里的(i)，(j)指的是加入了s, p的i个, j个元素，但实际上序号是从0开始的，所以最后在以上基础上要再减1。<br>
+例中最后一位即为当前检察的字母<br>
+
+解释一下：<br>
+1. 当S与P当前检查字母相同或者P当前检查字母为‘.’时，表明S与P当前检查位匹配，因此其结果由（二者前方所有元素是否匹配）决定。这就是（1）<br>
+2. 当P当前检察字母为\*时，当\*代表0次重复时，其结果与（S和P当前检查字母前两位是否匹配）相同，例如S=Ab, P=ABC\*。这就是（2）<br>
+3. 当P当前检察字母为\*时，当\*代表N次(N>0)重复时，若S当前检察的字符即为*代表的重复字母、*代表的重复字母为'.'时，其结果与（S当前检察字母前一位和P是否匹配）决定。例如S=ABc, P=ABC\*，此时\*所代表的的重复字母为C，刚好为S当前检查的字母，那么其结果S当前检察字母前一位与P（AB与ABC\*）是否匹配决定。这就是（3）<br>
 
 
 ## Code
-
+Solution 1: Recursion/Backtracking
 ```java
 class Solution10 {
     public boolean isMatch(String s, String p) {
@@ -116,8 +135,47 @@ class Solution10 {
     }
 }
 ```
+Solution 2: Dynamic Programming
+```java
+class Solution10 {
+    public boolean isMatch(String s, String p) {
+       
+        boolean test[][] = new boolean[s.length() + 1][p.length() + 1];
+        
+        test[0][0] = true;
+        
+        for (int i = 1; i < test[0].length; i++) {
+            if (p.charAt(i-1) == '*') {
+                test[0][i] = test[0][i - 2];
+            }
+        }
+        
+        for (int i = 1; i < test.length; i++) {
+            for (int j = 1; j < test[0].length; j++) {
+                if (p.charAt(j-1) == '.' || p.charAt(j-1) == s.charAt(i-1)) {
+                    test[i][j] = test[i-1][j-1];
+                } else if (p.charAt(j-1) == '*') {
+                    test[i][j] = test[i][j-2]; // 
+                    if (p.charAt(j-2) == '.' /* (s=c, p=.*)*/ ||
+                        p.charAt(j-2) == s.charAt(i-1) /* (s=c, p=.*) */) {
+                        test[i][j] = test[i][j] | test[i-1][j];
+                    }
+                } else {
+                    test[i][j] = false;
+                }
+            }
+        }
+        
+        return test[s.length()][p.length()];
+    }
+}
+```
 
 
 ## Submission details
+Solution 1:
 Runtime: 69 ms, faster than 14.37% of Java online submissions for Regular Expression Matching.<br>
 Memory Usage: 45 MB, less than 5.02% of Java online submissions for Regular Expression Matching.
+Solution 2:
+Runtime: 2 ms, faster than 97.10% of Java online submissions for Regular Expression Matching.<br>
+Memory Usage: 36 MB, less than 99.99% of Java online submissions for Regular Expression Matching.
